.antlr/LilypondParser.java
// Generated from /Users/Brad/Code/Scores/ly2musicxml/LilypondParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LilypondParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STAFFGROUP_CTX=1, STAFF_CTX=2, VOICE_CTX=3, HEADER_KW=4, LAYOUT_KW=5, 
		SCORE_KW=6, WITH_KW=7, VERSION_KW=8, SCHEME_GP=9, SCHEME_ATOM=10, ID=11, 
		STRING=12, VERSION_STR=13, HASH=14, LBRACE=15, RBRACE=16, LANGLE=17, RANGLE=18, 
		EQUALS=19, DOT=20, BSLASH=21, FSLASH=22, INTEGER=23, COMMENT_MULTILINE=24, 
		COMMENT_INLINE=25, WS=26, END_NOTEBLOCK=27, VOICE_CTX_N=28, REL_BLOCK_N=29, 
		START_POLYPHONY_N=30, NOTE=31, OCTAVE=32, TIME_SIG=33, BARLINE=34, BAR_KW=35, 
		CLEF_KW=36, DEFAULT_KW=37, FERMATA_KW=38, KEY_KW=39, MARK_KW=40, MODE_KW=41, 
		MODE_MAJ=42, MODE_MIN=43, RELATIVE_KW=44, TEMPO_KW=45, TIME_KW=46, COMMENT_MULTILINE_N=47, 
		COMMENT_INLINE_N=48, WS_N=49, NEXT_NOTEBLOCK_P=50, NEW_NOTEBLOCK_P=51, 
		VOICE_CTX_P=52, END_POLYPHONY_P=53, COMMENT_MULTILINE_P=54, COMMENT_INLINE_P=55, 
		WS_P=56;
	public static final int
		RULE_score_file = 0, RULE_header_block = 1, RULE_score_block = 2, RULE_staffgroup_block = 3, 
		RULE_staff_block = 4, RULE_prefix_block = 5, RULE_voice_block = 6, RULE_note_block = 7, 
		RULE_relative_block = 8, RULE_polyphony_block = 9, RULE_chord = 10, RULE_note_cmd = 11, 
		RULE_bar_cmd = 12, RULE_clef_cmd = 13, RULE_fermata_cmd = 14, RULE_key_cmd = 15, 
		RULE_mark_cmd = 16, RULE_scheme_cmd = 17, RULE_tempo_cmd = 18, RULE_time_cmd = 19, 
		RULE_version_cmd = 20, RULE_assignment = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"score_file", "header_block", "score_block", "staffgroup_block", "staff_block", 
			"prefix_block", "voice_block", "note_block", "relative_block", "polyphony_block", 
			"chord", "note_cmd", "bar_cmd", "clef_cmd", "fermata_cmd", "key_cmd", 
			"mark_cmd", "scheme_cmd", "tempo_cmd", "time_cmd", "version_cmd", "assignment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\new StaffGroup'", null, null, "'\\header'", "'\\layout'", "'\\score'", 
			"'\\with'", "'\\version'", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'\\bar'", "'\\clef'", "'\\default'", 
			"'\\fermata'", "'\\key'", "'\\mark'", null, "'\\major'", "'\\minor'", 
			"'\\relative'", "'\\tempo'", "'\\time'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STAFFGROUP_CTX", "STAFF_CTX", "VOICE_CTX", "HEADER_KW", "LAYOUT_KW", 
			"SCORE_KW", "WITH_KW", "VERSION_KW", "SCHEME_GP", "SCHEME_ATOM", "ID", 
			"STRING", "VERSION_STR", "HASH", "LBRACE", "RBRACE", "LANGLE", "RANGLE", 
			"EQUALS", "DOT", "BSLASH", "FSLASH", "INTEGER", "COMMENT_MULTILINE", 
			"COMMENT_INLINE", "WS", "END_NOTEBLOCK", "VOICE_CTX_N", "REL_BLOCK_N", 
			"START_POLYPHONY_N", "NOTE", "OCTAVE", "TIME_SIG", "BARLINE", "BAR_KW", 
			"CLEF_KW", "DEFAULT_KW", "FERMATA_KW", "KEY_KW", "MARK_KW", "MODE_KW", 
			"MODE_MAJ", "MODE_MIN", "RELATIVE_KW", "TEMPO_KW", "TIME_KW", "COMMENT_MULTILINE_N", 
			"COMMENT_INLINE_N", "WS_N", "NEXT_NOTEBLOCK_P", "NEW_NOTEBLOCK_P", "VOICE_CTX_P", 
			"END_POLYPHONY_P", "COMMENT_MULTILINE_P", "COMMENT_INLINE_P", "WS_P"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LilypondParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LilypondParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Score_fileContext extends ParserRuleContext {
		public List<Header_blockContext> header_block() {
			return getRuleContexts(Header_blockContext.class);
		}
		public Header_blockContext header_block(int i) {
			return getRuleContext(Header_blockContext.class,i);
		}
		public List<Score_blockContext> score_block() {
			return getRuleContexts(Score_blockContext.class);
		}
		public Score_blockContext score_block(int i) {
			return getRuleContext(Score_blockContext.class,i);
		}
		public List<Version_cmdContext> version_cmd() {
			return getRuleContexts(Version_cmdContext.class);
		}
		public Version_cmdContext version_cmd(int i) {
			return getRuleContext(Version_cmdContext.class,i);
		}
		public List<Scheme_cmdContext> scheme_cmd() {
			return getRuleContexts(Scheme_cmdContext.class);
		}
		public Scheme_cmdContext scheme_cmd(int i) {
			return getRuleContext(Scheme_cmdContext.class,i);
		}
		public Score_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_score_file; }
	}

	public final Score_fileContext score_file() throws RecognitionException {
		Score_fileContext _localctx = new Score_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_score_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(48);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case HEADER_KW:
					{
					setState(44);
					header_block();
					}
					break;
				case SCORE_KW:
					{
					setState(45);
					score_block();
					}
					break;
				case VERSION_KW:
					{
					setState(46);
					version_cmd();
					}
					break;
				case SCHEME_GP:
				case SCHEME_ATOM:
					{
					setState(47);
					scheme_cmd();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(50); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HEADER_KW) | (1L << SCORE_KW) | (1L << VERSION_KW) | (1L << SCHEME_GP) | (1L << SCHEME_ATOM))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_blockContext extends ParserRuleContext {
		public TerminalNode HEADER_KW() { return getToken(LilypondParser.HEADER_KW, 0); }
		public TerminalNode LBRACE() { return getToken(LilypondParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LilypondParser.RBRACE, 0); }
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public Header_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_block; }
	}

	public final Header_blockContext header_block() throws RecognitionException {
		Header_blockContext _localctx = new Header_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(HEADER_KW);
			setState(53);
			match(LBRACE);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(54);
				assignment();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Score_blockContext extends ParserRuleContext {
		public TerminalNode SCORE_KW() { return getToken(LilypondParser.SCORE_KW, 0); }
		public TerminalNode LBRACE() { return getToken(LilypondParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LilypondParser.RBRACE, 0); }
		public List<Staff_blockContext> staff_block() {
			return getRuleContexts(Staff_blockContext.class);
		}
		public Staff_blockContext staff_block(int i) {
			return getRuleContext(Staff_blockContext.class,i);
		}
		public List<Staffgroup_blockContext> staffgroup_block() {
			return getRuleContexts(Staffgroup_blockContext.class);
		}
		public Staffgroup_blockContext staffgroup_block(int i) {
			return getRuleContext(Staffgroup_blockContext.class,i);
		}
		public Score_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_score_block; }
	}

	public final Score_blockContext score_block() throws RecognitionException {
		Score_blockContext _localctx = new Score_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_score_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(SCORE_KW);
			setState(63);
			match(LBRACE);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STAFFGROUP_CTX || _la==STAFF_CTX) {
				{
				setState(66);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STAFF_CTX:
					{
					setState(64);
					staff_block();
					}
					break;
				case STAFFGROUP_CTX:
					{
					setState(65);
					staffgroup_block();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Staffgroup_blockContext extends ParserRuleContext {
		public TerminalNode STAFFGROUP_CTX() { return getToken(LilypondParser.STAFFGROUP_CTX, 0); }
		public List<TerminalNode> LANGLE() { return getTokens(LilypondParser.LANGLE); }
		public TerminalNode LANGLE(int i) {
			return getToken(LilypondParser.LANGLE, i);
		}
		public List<TerminalNode> RANGLE() { return getTokens(LilypondParser.RANGLE); }
		public TerminalNode RANGLE(int i) {
			return getToken(LilypondParser.RANGLE, i);
		}
		public List<Staff_blockContext> staff_block() {
			return getRuleContexts(Staff_blockContext.class);
		}
		public Staff_blockContext staff_block(int i) {
			return getRuleContext(Staff_blockContext.class,i);
		}
		public Staffgroup_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_staffgroup_block; }
	}

	public final Staffgroup_blockContext staffgroup_block() throws RecognitionException {
		Staffgroup_blockContext _localctx = new Staffgroup_blockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_staffgroup_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(STAFFGROUP_CTX);
			setState(74);
			match(LANGLE);
			setState(75);
			match(LANGLE);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STAFF_CTX) {
				{
				{
				setState(76);
				staff_block();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(RANGLE);
			setState(83);
			match(RANGLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Staff_blockContext extends ParserRuleContext {
		public TerminalNode STAFF_CTX() { return getToken(LilypondParser.STAFF_CTX, 0); }
		public TerminalNode END_NOTEBLOCK() { return getToken(LilypondParser.END_NOTEBLOCK, 0); }
		public Prefix_blockContext prefix_block() {
			return getRuleContext(Prefix_blockContext.class,0);
		}
		public List<Note_blockContext> note_block() {
			return getRuleContexts(Note_blockContext.class);
		}
		public Note_blockContext note_block(int i) {
			return getRuleContext(Note_blockContext.class,i);
		}
		public List<Polyphony_blockContext> polyphony_block() {
			return getRuleContexts(Polyphony_blockContext.class);
		}
		public Polyphony_blockContext polyphony_block(int i) {
			return getRuleContext(Polyphony_blockContext.class,i);
		}
		public List<Voice_blockContext> voice_block() {
			return getRuleContexts(Voice_blockContext.class);
		}
		public Voice_blockContext voice_block(int i) {
			return getRuleContext(Voice_blockContext.class,i);
		}
		public Staff_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_staff_block; }
	}

	public final Staff_blockContext staff_block() throws RecognitionException {
		Staff_blockContext _localctx = new Staff_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_staff_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(STAFF_CTX);
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(86);
				prefix_block();
				}
				break;
			}
			setState(92); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(92);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(89);
					note_block();
					}
					break;
				case 2:
					{
					setState(90);
					polyphony_block();
					}
					break;
				case 3:
					{
					setState(91);
					voice_block();
					}
					break;
				}
				}
				setState(94); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOICE_CTX) | (1L << LANGLE) | (1L << VOICE_CTX_N) | (1L << REL_BLOCK_N) | (1L << START_POLYPHONY_N) | (1L << NOTE) | (1L << BAR_KW) | (1L << CLEF_KW) | (1L << FERMATA_KW) | (1L << KEY_KW) | (1L << MARK_KW) | (1L << TEMPO_KW) | (1L << TIME_KW))) != 0) );
			setState(96);
			match(END_NOTEBLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Prefix_blockContext extends ParserRuleContext {
		public Key_cmdContext key_cmd() {
			return getRuleContext(Key_cmdContext.class,0);
		}
		public Time_cmdContext time_cmd() {
			return getRuleContext(Time_cmdContext.class,0);
		}
		public Prefix_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefix_block; }
	}

	public final Prefix_blockContext prefix_block() throws RecognitionException {
		Prefix_blockContext _localctx = new Prefix_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_prefix_block);
		int _la;
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TIME_KW) {
					{
					setState(98);
					time_cmd();
					}
				}

				setState(101);
				key_cmd();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				time_cmd();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Voice_blockContext extends ParserRuleContext {
		public TerminalNode END_NOTEBLOCK() { return getToken(LilypondParser.END_NOTEBLOCK, 0); }
		public TerminalNode VOICE_CTX() { return getToken(LilypondParser.VOICE_CTX, 0); }
		public TerminalNode VOICE_CTX_N() { return getToken(LilypondParser.VOICE_CTX_N, 0); }
		public List<Note_blockContext> note_block() {
			return getRuleContexts(Note_blockContext.class);
		}
		public Note_blockContext note_block(int i) {
			return getRuleContext(Note_blockContext.class,i);
		}
		public List<Polyphony_blockContext> polyphony_block() {
			return getRuleContexts(Polyphony_blockContext.class);
		}
		public Polyphony_blockContext polyphony_block(int i) {
			return getRuleContext(Polyphony_blockContext.class,i);
		}
		public Voice_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voice_block; }
	}

	public final Voice_blockContext voice_block() throws RecognitionException {
		Voice_blockContext _localctx = new Voice_blockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_voice_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if ( !(_la==VOICE_CTX || _la==VOICE_CTX_N) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOICE_CTX) | (1L << LANGLE) | (1L << VOICE_CTX_N) | (1L << REL_BLOCK_N) | (1L << START_POLYPHONY_N) | (1L << NOTE) | (1L << BAR_KW) | (1L << CLEF_KW) | (1L << FERMATA_KW) | (1L << KEY_KW) | (1L << MARK_KW) | (1L << TEMPO_KW) | (1L << TIME_KW))) != 0)) {
				{
				setState(108);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(106);
					note_block();
					}
					break;
				case 2:
					{
					setState(107);
					polyphony_block();
					}
					break;
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(END_NOTEBLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Note_blockContext extends ParserRuleContext {
		public List<Relative_blockContext> relative_block() {
			return getRuleContexts(Relative_blockContext.class);
		}
		public Relative_blockContext relative_block(int i) {
			return getRuleContext(Relative_blockContext.class,i);
		}
		public List<Note_cmdContext> note_cmd() {
			return getRuleContexts(Note_cmdContext.class);
		}
		public Note_cmdContext note_cmd(int i) {
			return getRuleContext(Note_cmdContext.class,i);
		}
		public List<Polyphony_blockContext> polyphony_block() {
			return getRuleContexts(Polyphony_blockContext.class);
		}
		public Polyphony_blockContext polyphony_block(int i) {
			return getRuleContext(Polyphony_blockContext.class,i);
		}
		public List<ChordContext> chord() {
			return getRuleContexts(ChordContext.class);
		}
		public ChordContext chord(int i) {
			return getRuleContext(ChordContext.class,i);
		}
		public List<TerminalNode> NOTE() { return getTokens(LilypondParser.NOTE); }
		public TerminalNode NOTE(int i) {
			return getToken(LilypondParser.NOTE, i);
		}
		public List<Voice_blockContext> voice_block() {
			return getRuleContexts(Voice_blockContext.class);
		}
		public Voice_blockContext voice_block(int i) {
			return getRuleContext(Voice_blockContext.class,i);
		}
		public Note_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_note_block; }
	}

	public final Note_blockContext note_block() throws RecognitionException {
		Note_blockContext _localctx = new Note_blockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_note_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(121); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(121);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case REL_BLOCK_N:
						{
						setState(115);
						relative_block();
						}
						break;
					case BAR_KW:
					case CLEF_KW:
					case FERMATA_KW:
					case KEY_KW:
					case MARK_KW:
					case TEMPO_KW:
					case TIME_KW:
						{
						setState(116);
						note_cmd();
						}
						break;
					case START_POLYPHONY_N:
						{
						setState(117);
						polyphony_block();
						}
						break;
					case LANGLE:
						{
						setState(118);
						chord();
						}
						break;
					case NOTE:
						{
						setState(119);
						match(NOTE);
						}
						break;
					case VOICE_CTX:
					case VOICE_CTX_N:
						{
						setState(120);
						voice_block();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(123); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Relative_blockContext extends ParserRuleContext {
		public TerminalNode REL_BLOCK_N() { return getToken(LilypondParser.REL_BLOCK_N, 0); }
		public Note_blockContext note_block() {
			return getRuleContext(Note_blockContext.class,0);
		}
		public TerminalNode END_NOTEBLOCK() { return getToken(LilypondParser.END_NOTEBLOCK, 0); }
		public Relative_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relative_block; }
	}

	public final Relative_blockContext relative_block() throws RecognitionException {
		Relative_blockContext _localctx = new Relative_blockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_relative_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(REL_BLOCK_N);
			setState(126);
			note_block();
			setState(127);
			match(END_NOTEBLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Polyphony_blockContext extends ParserRuleContext {
		public TerminalNode START_POLYPHONY_N() { return getToken(LilypondParser.START_POLYPHONY_N, 0); }
		public List<TerminalNode> NEW_NOTEBLOCK_P() { return getTokens(LilypondParser.NEW_NOTEBLOCK_P); }
		public TerminalNode NEW_NOTEBLOCK_P(int i) {
			return getToken(LilypondParser.NEW_NOTEBLOCK_P, i);
		}
		public List<Note_blockContext> note_block() {
			return getRuleContexts(Note_blockContext.class);
		}
		public Note_blockContext note_block(int i) {
			return getRuleContext(Note_blockContext.class,i);
		}
		public List<TerminalNode> END_NOTEBLOCK() { return getTokens(LilypondParser.END_NOTEBLOCK); }
		public TerminalNode END_NOTEBLOCK(int i) {
			return getToken(LilypondParser.END_NOTEBLOCK, i);
		}
		public TerminalNode END_POLYPHONY_P() { return getToken(LilypondParser.END_POLYPHONY_P, 0); }
		public List<TerminalNode> NEXT_NOTEBLOCK_P() { return getTokens(LilypondParser.NEXT_NOTEBLOCK_P); }
		public TerminalNode NEXT_NOTEBLOCK_P(int i) {
			return getToken(LilypondParser.NEXT_NOTEBLOCK_P, i);
		}
		public Polyphony_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_polyphony_block; }
	}

	public final Polyphony_blockContext polyphony_block() throws RecognitionException {
		Polyphony_blockContext _localctx = new Polyphony_blockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_polyphony_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(START_POLYPHONY_N);
			setState(130);
			match(NEW_NOTEBLOCK_P);
			setState(131);
			note_block();
			setState(132);
			match(END_NOTEBLOCK);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEXT_NOTEBLOCK_P) {
				{
				{
				setState(133);
				match(NEXT_NOTEBLOCK_P);
				setState(134);
				match(NEW_NOTEBLOCK_P);
				setState(135);
				note_block();
				setState(136);
				match(END_NOTEBLOCK);
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			match(END_POLYPHONY_P);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChordContext extends ParserRuleContext {
		public TerminalNode LANGLE() { return getToken(LilypondParser.LANGLE, 0); }
		public TerminalNode RANGLE() { return getToken(LilypondParser.RANGLE, 0); }
		public List<TerminalNode> NOTE() { return getTokens(LilypondParser.NOTE); }
		public TerminalNode NOTE(int i) {
			return getToken(LilypondParser.NOTE, i);
		}
		public TerminalNode INTEGER() { return getToken(LilypondParser.INTEGER, 0); }
		public TerminalNode DOT() { return getToken(LilypondParser.DOT, 0); }
		public ChordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chord; }
	}

	public final ChordContext chord() throws RecognitionException {
		ChordContext _localctx = new ChordContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_chord);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(LANGLE);
			setState(147); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(146);
				match(NOTE);
				}
				}
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NOTE );
			setState(151);
			match(RANGLE);
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(152);
				match(INTEGER);
				}
				break;
			case 2:
				{
				setState(153);
				match(INTEGER);
				setState(154);
				match(DOT);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Note_cmdContext extends ParserRuleContext {
		public Bar_cmdContext bar_cmd() {
			return getRuleContext(Bar_cmdContext.class,0);
		}
		public Clef_cmdContext clef_cmd() {
			return getRuleContext(Clef_cmdContext.class,0);
		}
		public Fermata_cmdContext fermata_cmd() {
			return getRuleContext(Fermata_cmdContext.class,0);
		}
		public Key_cmdContext key_cmd() {
			return getRuleContext(Key_cmdContext.class,0);
		}
		public Mark_cmdContext mark_cmd() {
			return getRuleContext(Mark_cmdContext.class,0);
		}
		public Tempo_cmdContext tempo_cmd() {
			return getRuleContext(Tempo_cmdContext.class,0);
		}
		public Time_cmdContext time_cmd() {
			return getRuleContext(Time_cmdContext.class,0);
		}
		public Note_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_note_cmd; }
	}
